k8s/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: self-service-orders
  name: self-service-orders
  namespace: self-service
spec:
  selector:
    matchLabels:
      app: self-service-orders
  template:
    metadata:
      labels:
        app: self-service-orders
    spec:
      containers:
        - image: 594646746001.dkr.ecr.us-east-1.amazonaws.com/self-service-orders:latest
          name: self-service-orders
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: self-service-orders
  name: self-service-orders
  namespace: self-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: self-service-orders
  type: ClusterIP

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: self-service-orders
  namespace: self-service
spec:
  gateways:
    - self-service-gateway
  hosts:
    - api.cloudburger.com.br
  http:
    - name: self-service-orders
      match:
        - uri:
            prefix: /orders
      route:
        - destination:
            host: self-service-orders
